--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
+baseurl: /lpic1
 title: Livro LPIC 101 - O Curso
 email: alfredorodruguesbraga@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
